<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (c) 2012-2017 TypeFox GmbH and itemis AG. All rights reserved. 
	This program and the accompanying materials are made
	available under the terms of the Eclipse Public License 2.0
	which is available at https://www.eclipse.org/legal/epl-2.0/
	SPDX-License-Identifier: EPL-2.0 Contributors:
	Moritz Eysholdt - Initial contribution and API -->

<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.xpect</groupId>
	<artifactId>org.eclipse.xpect.root</artifactId>
	<version>0.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<target-platform>eclipse_2023_03-xtext_2_31_0</target-platform>
		<tycho-version>2.7.5</tycho-version>
	</properties> 

	<build>
		<plugins>
			<!-- Don't publish this artifact to Maven repositories. -->
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
				<version>${tycho-version}</version>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>plugins</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>org.eclipse.xpect.releng/maven-plugin-parent</module>
			</modules>
		</profile>
		<profile>
			<id>xtext-examples</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>org.eclipse.xpect.releng/xtext-examples/maven-parents/grammar-plugin</module>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.arithmetics</module>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.arithmetics.ide</module>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.arithmetics.ui</module>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.domainmodel</module>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.domainmodel.ide</module>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.domainmodel.ui</module>
			</modules>
		</profile>
		<profile>
			<id>tests</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.arithmetics.tests</module>
				<module>org.eclipse.xpect.releng/xtext-examples/org.eclipse.xtext.example.domainmodel.tests</module>
				<module>org.eclipse.xpect.releng/maven-test-parent</module>
				<module>org.eclipse.xpect.tests</module>
				<module>org.eclipse.xpect.xtext.lib.tests</module>
				<module>org.eclipse.xtext.example.arithmetics.xpect.tests</module>
				<module>org.eclipse.xtext.example.domainmodel.xpect.tests</module>
			</modules>
		</profile>
	</profiles>
</project>
